# minio-dashboard-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: lib.rs
src/constant/: mod.rs
src/minio/: bucket.rs  mod.rs  s3_client.rs
