#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[package]
name = "minio-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
async-recursion = "1.0.0"
clap = { version = "4.0.27", features = ["derive"]}
chrono = "0.4"
fern = "0.6.1"
futures = "0.3.18"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }

[[bin]]
name = "minio-cli"
path = "src/bin/cmd/minio_cli.rs"

[[bin]]
name = "minio-dashboard"
path = "src/bin/minio_dashboard.rs"
